--- a/css/index.less
+++ b/css/index.less
@@ -147,6 +147,7 @@
         position: absolute;
         top: 100%;
         left: 0;
+        z-index: 5;
         width: 100%;
         background-color: #fff;
         border: 1px solid #cfd2d5;
