--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 
+D:\Desktop\cMall\css>"node"  "C:\Users\Administrator\AppData\Roaming\npm\\node_modules\less\bin\lessc" --no-color index.less 
 /*=========站点导航样式=========*/
 .nav-site {
   width: 100%;
@@ -601,6 +602,8 @@
   width: 80%;
   min-width: 1200px;
   border-top: 1px solid #cfd2d5;
+  display: flex;
+  justify-content: center;
 }
 .footer .container .helper-wrap {
   width: 100%;
