--- a/css/index.less
+++ b/css/index.less
@@ -608,6 +608,8 @@
     width: 80%;
     min-width: 1200px;
     border-top: 1px solid #cfd2d5;
+    display: flex;
+    justify-content: center;
     .helper-wrap{
       width: 100%;
       height: 139px;
